--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,28 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+<ion-toolbar>
+    <ion-title>Informacion</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="dark" (click) = "clickFavs ()"> 
+        <ion-icon name="home"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  
+
+  <ion-card *ngFor = "let casa of casas">
+    <ion-row>
+      <ion-col>
+        <img [src] = casa.foto>
+      </ion-col>
+      <ion-col>
+        <p (click)= "clickinfo (casa)" >{{casa.ciudad}}</p>
+        <p (click)= "clickinfo (casa)">{{casa.colonia}}</p>
+        <p (click)= "clickinfo (casa)">{{casa.precio}}</p>
+      </ion-col>
+      
+    </ion-row>
+  </ion-card>
 </ion-content>
